--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,76 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go API - Ürün Yönetimi</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        h1, h2, h3 {
-            color: #5cb85c;
-        }
-        form {
-            background: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-        input[type="text"], input[type="number"] {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #5cb85c;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        button:hover {
-            background-color: #4cae4c;
-        }
-        .update-btn {
-            background-color: #337ab7;
-        }
-        .delete-btn {
-            background-color: #d9534f;
-        }
-        .cancel-btn {
-            background-color: #f0ad4e;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            background: #fff;
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .actions {
-            display: flex;
-            gap: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
+
 <body>
 
     <h1>Ürün Yönetim Paneli</h1>
@@ -83,125 +20,14 @@
         <button type="submit" id="submitBtn">Ürün Ekle</button>
         <button type="button" id="cancelBtn" class="cancel-btn" style="display:none;">İptal</button>
     </form>
-    
+
     <hr>
-    
+
     <h2>Ürün Listesi</h2>
     <ul id="urunListesi"></ul>
 
-    <script>
-        const API_URL = "http://localhost:8080/api/urunler";
-        const urunForm = document.getElementById("urunForm");
-        const urunIdInput = document.getElementById("urunId");
-        const urunAdiInput = document.getElementById("urunAdi");
-        const stokMiktariInput = document.getElementById("stokMiktari");
-        const fiyatInput = document.getElementById("fiyat");
-        const submitBtn = document.getElementById("submitBtn");
-        const cancelBtn = document.getElementById("cancelBtn");
-        const urunListesi = document.getElementById("urunListesi");
-
-        document.addEventListener("DOMContentLoaded", fetchUrunler);
-
-        async function fetchUrunler() {
-            try {
-                const response = await fetch(API_URL);
-                if (!response.ok) {
-                    throw new Error(`HTTP Hata! Durum: ${response.status}`);
-                }
-                const urunler = await response.json();
-                renderUrunler(urunler);
-            } catch (error) {
-                console.error("Ürünler çekilirken bir hata oluştu:", error);
-            }
-        }
-
-        function renderUrunler(urunler) {
-            urunListesi.innerHTML = '';
-            if (urunler && urunler.length > 0) {
-                urunler.forEach(urun => {
-                    const li = document.createElement("li");
-                    li.innerHTML = `
-                        <span>${urun.urun_adi} - Stok: ${urun.stok_miktari} - Fiyat: ${urun.fiyat} TL</span>
-                        <div class="actions">
-                            <button class="update-btn" onclick="prepareUpdate(${urun.id}, '${urun.urun_adi}', ${urun.stok_miktari}, ${urun.fiyat})">Güncelle</button>
-                            <button class="delete-btn" onclick="deleteUrun(${urun.id})">Sil</button>
-                        </div>
-                    `;
-                    urunListesi.appendChild(li);
-                });
-            } else {
-                urunListesi.innerHTML = '<li>Henüz ürün bulunmamaktadır.</li>';
-            }
-        }
-
-        urunForm.addEventListener("submit", async (e) => {
-            e.preventDefault();
-            const id = urunIdInput.value;
-            const urun = {
-                urun_adi: urunAdiInput.value,
-                stok_miktari: parseInt(stokMiktariInput.value, 10),
-                fiyat: parseFloat(fiyatInput.value)
-            };
-
-            try {
-                if (id) {
-                    await updateUrun(id, urun);
-                } else {
-                    await createUrun(urun);
-                }
-            } catch (error) {
-                console.error("İşlem sırasında bir hata oluştu:", error);
-            }
-        });
-
-        async function createUrun(urun) {
-            await fetch(API_URL, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(urun)
-            });
-            resetForm();
-            fetchUrunler();
-        }
-
-        async function deleteUrun(id) {
-            const confirmed = confirm("Bu ürünü silmek istediğinizden emin misiniz?");
-            if (confirmed) {
-                await fetch(`${API_URL}/${id}`, {
-                    method: "DELETE"
-                });
-                fetchUrunler();
-            }
-        }
-
-        function prepareUpdate(id, ad, stok, fiyat) {
-            urunIdInput.value = id;
-            urunAdiInput.value = ad;
-            stokMiktariInput.value = stok;
-            fiyatInput.value = fiyat;
-            submitBtn.textContent = "Güncelle";
-            cancelBtn.style.display = "inline";
-        }
-
-        async function updateUrun(id, urun) {
-            await fetch(`${API_URL}/${id}`, {
-                method: "PUT",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify(urun)
-            });
-            resetForm();
-            fetchUrunler();
-        }
-
-        cancelBtn.addEventListener("click", resetForm);
-
-        function resetForm() {
-            urunForm.reset();
-            urunIdInput.value = "";
-            submitBtn.textContent = "Ürün Ekle";
-            cancelBtn.style.display = "none";
-        }
-    </script>
+    <script src="/static/script.js"></script>
 
 </body>
+
 </html>
